cargo-features = ["edition2024"]

[workspace]
resolver = "2"
members = ["matcher_rs", "matcher_py", "matcher_c"]

[workspace.package]
authors = ["Fuji Guo <f975793771@gmail.com>"]
categories = ["text-processing"]
description = "A high performance multiple functional word matcher"
edition = "2021"
homepage = "https://github.com/Lips7/Matcher"
readme = "README.md"
keywords = ["text", "string", "search", "pattern", "multi"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Lips7/Matcher"
version = "0.2.4"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
incremental = false
debug = false
debug-assertions = false
overflow-checks = false
# panic = "abort"
