[workspace]
resolver = "2"
members = ["matcher_rs", "matcher_py", "matcher_c"]

[workspace.package]
authors = ["Foster Guo <f975793771@gmail.com>"]
categories = ["text-processing"]
description = "A high-performance matcher designed to solve LOGICAL and TEXT VARIATIONS problems in word matching, implemented in Rust."
edition = "2021"
homepage = "https://github.com/Lips7/Matcher"
readme = "README.md"
keywords = ["text", "string", "search", "pattern", "multi"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Lips7/Matcher"
version = "0.5.5"
rust-version = "1.79.0"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
incremental = false
debug = false
debug-assertions = false
overflow-checks = false

[profile.bench]
strip = "none"
opt-level = 3
lto = true
codegen-units = 1
incremental = false
debug = true
debug-assertions = false
overflow-checks = false
