[package]
name = "matcher_c"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/matcher_c/latest/matcher_c/"

[lib]
name = "matcher_c"
crate-type = ["cdylib"]

[dependencies]
matcher_rs = { path = "../matcher_rs", version = "0.2.8" }
rmp-serde = "1.3.0"
sonic-rs = "0.3.7"
