[package]
name = "matcher_c"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/crate/matcher_c/latest"

[lib]
name = "matcher_c"
crate-type = ["cdylib", "rlib"]

[dependencies]
matcher_rs = { path = "../matcher_rs", version = "0.5.5" }
sonic-rs = "0.3.15"
