[package]
name = "matcher_c"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/crate/matcher_c/latest"

[lib]
name = "matcher_c"
crate-type = ["cdylib", "rlib"]

[dependencies]
matcher_rs = { path = "../matcher_rs", version = "0.7.1" }
sonic-rs = "0.5.6"

[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
tikv-jemallocator = "0.6.1"

[target.'cfg(not(all(target_os = "linux", target_arch = "aarch64")))'.dependencies]
mimalloc = "0.1.48"
