[package]
name = "matcher_java"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "matcher_java"
crate-type = ["cdylib"]
path = "src/main/rust/lib.rs"

[dependencies]
matcher_rs = { path = "../matcher_rs", version = "0.15.0", features = ["serde", "rayon"] }
jni = "0.22.4"
sonic-rs = "0.5.8"
