[package]
name = "matcher_py"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/crate/matcher_py/latest"
build = "build.rs"

[lib]
name = "matcher_py"
crate-type = ["cdylib"]

[dependencies]
matcher_rs = { path = "../matcher_rs", version = "0.5.6" }
pyo3 = { version = "0.23.1", features = ["extension-module"] }
sonic-rs = "0.3.16"

[build-dependencies]
pyo3-build-config = "0.23.1"
