[package]
name = "matcher_py"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/crate/matcher_py/latest"
build = "build.rs"

[lib]
name = "matcher_py"
crate-type = ["cdylib"]

[dependencies]
matcher_rs = { path = "../matcher_rs", version = "0.5.7" }
pyo3 = { version = "0.25.0", features = ["extension-module"] }
sonic-rs = "0.5.1"

[build-dependencies]
pyo3-build-config = "0.25.0"
