[package]
name = "matcher_py"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/crate/matcher_py/latest"
build = "build.rs"

[lib]
name = "matcher_py"
crate-type = ["cdylib"]

[dependencies]
matcher_rs = { path = "../matcher_rs", version = "0.8.0" }
pyo3 = { version = "0.28.2", features = ["extension-module"] }
sonic-rs = "0.5.7"

[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
tikv-jemallocator = "0.6.1"

[target.'cfg(not(all(target_os = "linux", target_arch = "aarch64")))'.dependencies]
mimalloc = "0.1.48"

[build-dependencies]
pyo3-build-config = "0.28.2"
