[project]
name = "matcher_py"
description = "Blazingly fast Word Matcher"
version = "0.4.3"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = 'Fuji Guo', email = "f975793771@gmail.com" }]
dependencies = ["numpy>=1.16", "msgspec"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Typing :: Typed",
]

[project.urls]
homepage = "https://github.com/Lips7/Matcher"
repository = "https://github.com/Lips7/Matcher"

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
strip = true
profile = "release"
module-name = "matcher_py"
rustc-args = ["-C", "target-cpu=native"]
