[project]
name = "matcher_py"
description = "A high-performance matcher designed to solve LOGICAL and TEXT VARIATIONS problems in word matching, implemented in Rust."
version = "0.5.7"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = 'Foster Guo', email = "f975793771@gmail.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Typing :: Typed",
]

[project.urls]
homepage = "https://github.com/Lips7/Matcher"
repository = "https://github.com/Lips7/Matcher"
changelog = "https://github.com/Lips7/Matcher/blob/master/CHANGELOG.md"

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest",
    "pip"
]

[tool.maturin]
python-source = "python"
bindings = "pyo3"
strip = true
profile = "release"
module-name = "matcher_py"
rustc-args = ["-C", "target-cpu=native"]
