[package]
name = "matcher_rs"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/crate/matcher_rs/latest"
build = "build.rs"

[package.metadata.docs.rs]
rustc-args = ["-C", "target-feature=native"]
rustdoc-args = ["-C", "target-feature=native", "--document-private-items"]

[lib]
name = "matcher_rs"
crate-type = ["rlib"]

[dependencies]
ahash = "0.8"
aho-corasick = "1.1.4"
bitflags = "2.11.0"
daachorse = "1.0.0"
mimalloc = { version = "0.1.48", features = ["v3"] }
serde = { version = "1.0.228", features = ["derive"] }
tinyvec = { version = "1.11.0", features = ["alloc"] }

[build-dependencies]
daachorse = "1.0.0"

[dev-dependencies]
divan = "0.1.21"
proptest = "1.11.0"
serde_json = "1.0"

[features]
default = ["dfa", "simd_runtime_dispatch"]
# By enabling the runtime_build feature, process matchers are built at startup from source text maps, increasing startup time.
runtime_build = []
# By enabling the dfa feature, DFA-backed Aho-Corasick automata are used for matching, significantly increasing memory usage.
dfa = []
# By enabling the simd_runtime_dispatch feature, the best available transform kernel is selected at runtime (AVX2/NEON/portable).
simd_runtime_dispatch = []

[package.metadata.cargo-all-features]
skip_feature_sets = [["simd_runtime_dispatch"]]

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "bench_engine"
harness = false
