[package]
name = "matcher_rs"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/crate/matcher_rs/latest"
build = "build.rs"

[package.metadata.docs.rs]
rustc-args = ["-C", "target-feature=native"]
rustdoc-args = ["-C", "target-feature=native", "--document-private-items"]

[lib]
name = "matcher_rs"
crate-type = ["rlib"]

[dependencies]
ahash = "0.8"
aho-corasick = { version = "1.1.4", optional = true }
bitflags = "2.11.0"
daachorse = "1.0.1"
mimalloc = { version = "0.1.48", features = ["v3"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2"
tinyvec = { version = "1.11.0", features = ["alloc"] }

[dev-dependencies]
divan = "0.1.21"
proptest = "1.11.0"
serde_json = "1.0"

[features]
default = ["perf"]
# Enables all performance features: DFA automaton and SIMD transform dispatch.
perf = ["dfa", "simd_runtime_dispatch"]
# By enabling the dfa feature, DFA-backed Aho-Corasick automata are used for matching, significantly increasing memory usage.
dfa = ["aho-corasick"]
# By enabling the simd_runtime_dispatch feature, the best available transform kernel is selected at runtime (AVX2/NEON/portable).
simd_runtime_dispatch = []

[package.metadata.cargo-all-features]
allowlist = ["perf"]

[[bench]]
name = "bench_build"
harness = false

[[bench]]
name = "bench_search"
harness = false

[[bench]]
name = "bench_scaling"
harness = false

[[bench]]
name = "bench_transform"
harness = false

[[bench]]
name = "bench_complexity"
harness = false

[[bench]]
name = "bench_optimization"
harness = false

[[bench]]
name = "bench_edge_cases"
harness = false


[[example]]
name = "characterize_engines"
required-features = ["dfa"]
