[package]
name = "vectorscan-rs-sys"
version = "0.0.2"
edition = "2021"
build = "build.rs"
links = "hs"

[features]
gen = ["bindgen"]
simd_specialization = []
cpu_native = []

[build-dependencies]
bindgen = { version = "0.69", optional = true }
cmake = "0.1"
flate2 = "1.0"
tar = "0.4"

[lib]
doctest = false
